--- a/database.properties
+++ b/database.properties
@@ -4,6 +4,6 @@ UserName=root
 Password=password
 useUnicode=true
 CharacterEncoding=UTF8
-MetaTableName=MateHunk
+MetaTableName=metaHunk
 MetricsTableName=MetricsHunk
 BowTableName=BowHunk
