--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,10 +1,9 @@
 # Define the root logger with appender file
 log = /home/niubinbin/ideaProjects/changeHunk
-log4j.rootLogger = INFO,F,S
+log4j.rootLogger = F,S
 # Define the file appender
 log4j.appender.F=org.apache.log4j.FileAppender
 log4j.appender.F.File=${log}/log
-
 # Define the layout for file appender
 log4j.appender.F.Append = false
 log4j.appender.F.Threshold = DEBUG
@@ -13,5 +12,6 @@ log4j.appender.F.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] -
 
 log4j.appender.S = org.apache.log4j.ConsoleAppender
 log4j.appender.S.Target = System.out
+log4j.appender.S.Threshold = INFO
 log4j.appender.S.layout = org.apache.log4j.PatternLayout
 log4j.appender.S.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m%n
