--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Define the root logger with appender file
 log = /home/niubinbin/ideaProjects/changeHunk
-log4j.rootLogger = F,S
+log4j.rootLogger = DEBUG,F,S
 # Define the file appender
 log4j.appender.F=org.apache.log4j.FileAppender
 log4j.appender.F.File=${log}/log
@@ -8,10 +8,10 @@ log4j.appender.F.File=${log}/log
 log4j.appender.F.Append = false
 log4j.appender.F.Threshold = DEBUG
 log4j.appender.F.layout = org.apache.log4j.PatternLayout
-log4j.appender.F.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m%n
+log4j.appender.F.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %l %m%n
 
 log4j.appender.S = org.apache.log4j.ConsoleAppender
 log4j.appender.S.Target = System.out
 log4j.appender.S.Threshold = INFO
 log4j.appender.S.layout = org.apache.log4j.PatternLayout
-log4j.appender.S.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m%n
+log4j.appender.S.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %l %m%n
