--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,17 +1,27 @@
 # Define the root logger with appender file
 log = /home/niubinbin/ideaProjects/changeHunk
-log4j.rootLogger = DEBUG,F,S
+log4j.rootLogger = DEBUG,STDOUT,D,F
+
+log4j.appender.STDOUT = org.apache.log4j.ConsoleAppender
+log4j.appender.STDOUT.Target = System.out
+log4j.appender.STDOUT.Threshold = INFO
+log4j.appender.STDOUT.layout = org.apache.log4j.PatternLayout
+log4j.appender.STDOUT.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %l %m%n
+
+log4j.appender.D=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.D.File=${log}/logs/log.log
+log4j.appender.D.DatePattern='_'yyyy-MM-dd'.log'
+log4j.appender.D.Append=true
+log4j.appender.D.Threshold=DEBUG
+log4j.appender.D.layout = org.apache.log4j.PatternLayout
+log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %l %m%n
 # Define the file appender
-log4j.appender.F=org.apache.log4j.FileAppender
-log4j.appender.F.File=${log}/log
-# Define the layout for file appender
-log4j.appender.F.Append = false
-log4j.appender.F.Threshold = DEBUG
+
+log4j.appender.F=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.F.File=${log}/logs/error.log
+log4j.appender.F.DatePattern='_'yyyy-MM-dd'.log'
+log4j.appender.F.Append = true
+log4j.appender.F.Threshold = ERROR
 log4j.appender.F.layout = org.apache.log4j.PatternLayout
 log4j.appender.F.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %l %m%n
 
-log4j.appender.S = org.apache.log4j.ConsoleAppender
-log4j.appender.S.Target = System.out
-log4j.appender.S.Threshold = INFO
-log4j.appender.S.layout = org.apache.log4j.PatternLayout
-log4j.appender.S.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} - [ %p ] %l %m%n
